Create components and setup component reusability

--- a/global/jinja-macros/render-doc.html
+++ b/global/jinja-macros/render-doc.html
@@ -1,6 +1,12 @@
 {% macro render_doc(doc_to_render) %}
   {% if doc_to_render.components %}
-    {% for field in doc_to_render.components %}
+
+    {% set components = [] %}
+    {% do components.append(g.yaml('/content/data/nav.yaml')) %}
+    {% set components = components + doc_to_render.components %}
+    {% do components.append(g.yaml('/content/data/footer.yaml')) %}
+
+    {% for field in components %}
       {% if not field.component %}
         {% continue %}
       {% endif %}
