--- a/global/base.html
+++ b/global/base.html
@@ -42,7 +42,7 @@
     />
     {% endif %}
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:,400,600|Roboto:400,600"
       rel="stylesheet"
     />
     <link
