--- a/global/base.html
+++ b/global/base.html
@@ -42,7 +42,7 @@
     />
     {% endif %}
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:,400,600|Roboto:400,600"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Roboto:400,600"
       rel="stylesheet"
     />
     <link
@@ -61,7 +61,7 @@
     {% if podspec.meta.google_analytics_id %}
     <script>
       (function(i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
+        i['GoogleAnalyticsObject'] = r;
         (i[r] =
           i[r] ||
           function() {
@@ -75,12 +75,12 @@
       })(
         window,
         document,
-        "script",
-        "//www.google-analytics.com/analytics.js",
-        "ga"
+        'script',
+        '//www.google-analytics.com/analytics.js',
+        'ga'
       );
-      ga("create", "{{podspec.meta.google_analytics_id}}", "auto");
-      ga("send", "pageview");
+      ga('create', '{{podspec.meta.google_analytics_id}}', 'auto');
+      ga('send', 'pageview');
     </script>
     {% endif %}
   </body>
