--- a/global/jinja-macros/render-doc.html
+++ b/global/jinja-macros/render-doc.html
@@ -6,15 +6,13 @@
     {% set components = components + doc_to_render.components %}
     {% do components.append(g.yaml('/content/data/footer.yaml')) %}
 
-    {% for field in components %}
-      {% if not field.component %}
-        {% continue %}
+    {% for component in components %}
+      {% if component.wrap == False %}
+        {% set component_filename = '/components/' + component.component + '/' + component.component.split('/')[-1] + '.html' %}
+      {% else %}
+        {% set component_filename = '/components/skewed-section/skewed-section.html' %}
       {% endif %}
-
-      {% set component_filename = '/components/' + field.component + '/' + field.component.split('/')[-1] + '.html' %}
-      {% with component = field %}
-        {% include component_filename with context %}
-      {% endwith %}
+      {% include component_filename with context %}
     {% endfor %}
   {% else %}
     {{doc_to_render.formatted|safe}}
