--- a/global/base.html
+++ b/global/base.html
@@ -4,43 +4,43 @@
   <head>
     <meta charset="utf-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    {% if podspec.meta.google_site_verification %}
+    {%- if podspec.meta.google_site_verification -%}
     <meta
       name="google-site-verification"
       content="{{ podspec.meta.google_site_verification }}"
     />
-    {% endif %}
+    {%- endif -%}
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, height=device-height"
     />
     <title>
-      {% if doc.title %}{{ doc.title }} – {% endif %}{{ podspec.title }}
+      {%- if doc.title -%}{{ doc.title }} – {%- endif -%}{{ podspec.title }}
     </title>
-    {% if podspec.meta.image %}
+    {%- if podspec.meta.image -%}
     <meta
       property="og:image"
       content="{{ g.static(podspec.meta.image).url }}"
     />
-    {% endif %}
+    {%- endif -%}
     <meta
       property="og:title"
-      content="{% if doc.title %}{{ doc.title }} – {% endif %}{{
+      content="{%- if doc.title -%}{{ doc.title }} – {%- endif -%}{{
         podspec.title
       }}"
     />
     <meta property="og:site_name" content="{{ podspec.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ doc.url }}" />
-    {% if doc.description %}
+    {%- if doc.description -%}
     <meta name="description" content="{{ doc.description }}" />
     <meta property="og:description" content="{{ doc.description }}" />
-    {% endif %} {% if podspec.meta.favicon_path %}
+    {%- endif -%} {%- if podspec.meta.favicon_path -%}
     <link
       rel="shortcut icon"
       href="{{ g.static(podspec.meta.favicon_path).url.path }}"
     />
-    {% endif %}
+    {%- endif -%}
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Roboto:400,600,800"
       rel="stylesheet"
@@ -56,7 +56,7 @@
 
     <script src="{{ g.static('/dist/js/main.min.js').url.path }}"></script>
 
-    {% if podspec.meta.google_analytics_id %}
+    {%- if podspec.meta.google_analytics_id -%}
     <script>
       (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -80,6 +80,6 @@
       ga('create', '{{podspec.meta.google_analytics_id}}', 'auto');
       ga('send', 'pageview');
     </script>
-    {% endif %}
+    {%- endif -%}
   </body>
 </html>
