--- a/global/jinja-macros/render-doc.html
+++ b/global/jinja-macros/render-doc.html
@@ -1,22 +1,22 @@
-{% macro render_doc(doc_to_render) %}
-  {% if doc_to_render.components %}
+{%- macro render_doc(doc_to_render) -%}
+  {%- if doc_to_render.components -%}
 
-    {% set components = [] %}
-    {% do components.append(g.yaml('/content/data/nav.yaml')) %}
-    {% set components = components + doc_to_render.components %}
-    {% do components.append(g.yaml('/content/data/footer.yaml')) %}
+    {%- set components = [] -%}
+    {%- do components.append(g.yaml('/content/data/nav.yaml')) -%}
+    {%- set components = components + doc_to_render.components -%}
+    {%- do components.append(g.yaml('/content/data/footer.yaml')) -%}
 
-    {% for component in components %}
+    {%- for component in components -%}
       {# Checks against False, because the absence of the property in the #}
       {# yaml file is assumed to imply that wrapping should be used. #}
-      {% if component.wrap_with_skewed_section == False %}
-        {% set component_filename = '/components/' + component.component + '/' + component.component.split('/')[-1] + '.html' %}
-      {% else %}
-        {% set component_filename = '/components/skewed-section/skewed-section.html' %}
-      {% endif %}
-      {% include component_filename with context %}
-    {% endfor %}
-  {% else %}
+      {%- if component.wrap_with_skewed_section == False -%}
+        {%- set component_filename = '/components/' + component.component + '/' + component.component.split('/')[-1] + '.html' -%}
+      {%- else -%}
+        {%- set component_filename = '/components/skewed-section/skewed-section.html' -%}
+      {%- endif -%}
+      {%- include component_filename with context -%}
+    {%- endfor -%}
+  {%- else -%}
     {{doc_to_render.formatted|safe}}
-  {% endif %}
-{% endmacro %}
+  {%- endif -%}
+{%- endmacro -%}
