--- a/global/base.html
+++ b/global/base.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, height=device-height"
     />
     <title>
-      {%- if doc.title -%}{{ doc.title }} – {%- endif -%}{{ podspec.title }}
+      {% if doc.title %}{{ doc.title }} – {% endif %}{{ podspec.title }}
     </title>
     {%- if podspec.meta.image -%}
     <meta
