--- a/global/base.html
+++ b/global/base.html
@@ -51,7 +51,7 @@
     />
     <base href="/" />
   </head>
-  <body>
+  <body class="body">
     {{ render_doc.render_doc(doc) }}
 
     <script src="{{ g.static('/dist/js/main.min.js').url.path }}"></script>
