--- a/global/base.html
+++ b/global/base.html
@@ -41,9 +41,7 @@
       href="{{ g.static(podspec.meta.favicon_path).url.path }}"
     />
     {%- endif -%}
-    <style>
-      {% include 'dist/css/main.min.css' %}
-    </style>
+    <style>{%- include 'dist/css/main.min.css' -%}</style>
     <base href="/" />
   </head>
   <body class="body">
